# LimeSDR4Edema

./: .gitignore  requirements.txt
CaseDesignFiles/: LowerCasing.3mf  LowerCasing.stl  UpperCover.3mf  UpperCover.stl
cpp/: CMakeLists.txt  HeaderLibrary.xlsx  detectDevice.cpp  deviceCheck.cpp  maiden  maiden.cpp  step1  step1.cpp  test  test.cpp
documents/: .~lock.HeaderLibrary.xlsx#  .~lock.LearningCourse.docx#  HeaderLibrary.txt  HeaderLibrary.xlsx  LearningCourse.docx  LimeSDRminiV2_DevGuide.docx
limeSuiteLearning/: limesuite  limesuite.cpp  liveViz.py  shareMemoryVisuals.ipynb
notebooks/: temp.ipynb  test.ipynb
sharedMemoryVisuals/: consumer.py  limesuite  limesuite.cpp  liveViz.py  provider  provider.cpp  pyReq.txt
